@@ -22,9 +22,9 @@ import org.apache.kafka.common.Node;
 import org.apache.kafka.common.acl.AclOperation;
 import org.apache.kafka.common.annotation.InterfaceStability;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -35,26 +35,25 @@ import java.util.stream.Collectors;
 @InterfaceStability.Evolving
 public class ShareGroupDescription {
     private final String groupId;
-    private final Collection<MemberDescription> members;
+    private final Collection<ShareMemberDescription> members;
     private final GroupState groupState;
     private final Node coordinator;
     private final Set<AclOperation> authorizedOperations;
 
     public ShareGroupDescription(String groupId,
-                                 Collection<MemberDescription> members,
+                                 Collection<ShareMemberDescription> members,
                                  GroupState groupState,
                                  Node coordinator) {
         this(groupId, members, groupState, coordinator, Collections.emptySet());
     }
 
     public ShareGroupDescription(String groupId,
-                                 Collection<MemberDescription> members,
+                                 Collection<ShareMemberDescription> members,
                                  GroupState groupState,
                                  Node coordinator,
                                  Set<AclOperation> authorizedOperations) {
         this.groupId = groupId == null ? "" : groupId;
-        this.members = members == null ? Collections.emptyList() :
-            Collections.unmodifiableList(new ArrayList<>(members));
+        this.members = members == null ? Collections.emptyList() : List.copyOf(members);
         this.groupState = groupState;
         this.coordinator = coordinator;
         this.authorizedOperations = authorizedOperations;
@@ -87,7 +86,7 @@ public class ShareGroupDescription {
     /**
      * A list of the members of the share group.
      */
-    public Collection<MemberDescription> members() {
+    public Collection<ShareMemberDescription> members() {
         return members;
     }
 
@@ -115,7 +114,7 @@ public class ShareGroupDescription {
     @Override
     public String toString() {
         return "(groupId=" + groupId +
-            ", members=" + members.stream().map(MemberDescription::toString).collect(Collectors.joining(",")) +
+            ", members=" + members.stream().map(ShareMemberDescription::toString).collect(Collectors.joining(",")) +
             ", groupState=" + groupState +
             ", coordinator=" + coordinator +
             ", authorizedOperations=" + authorizedOperations +
